[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "2.3.2"
requests = "^2.31.0"
flask = "^2.3.3"
nose = "^1.3.7"
six = "^1.16.0"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"
aiogram = "^3.1.1"
utils = "^1.0.1"
discord-py = "^2.3.2"
pygrowup = "^0.8.2"
pytz = "^2023.3.post1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"